fix can't scroll channel list on mobile

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -924,6 +924,9 @@ img {
 }
 
 #channels::-webkit-scrollbar {
+	width: 0px;
+}
+#channels:hover::-webkit-scrollbar {
 	width: 11px;
 }
 #channels::-webkit-scrollbar-thumb {
